# cloai-code

./: .gitignore  CLOAI_DESKTOP_v0.0.3_RELEASE_NOTE.md  README.md  package.json  test-compile.ts
desktop-app/: .gitignore  README-ASSETS.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop-app/scripts/: run-tauri.mjs
desktop-app/src/: api.ts  main.tsx  vite-env.d.ts
desktop-app/src/native/: Cargo.toml  tauri.conf.json
desktop-app/src/native/capabilities/: default.json
desktop-app/src/native/src/: artifacts.rs  commands.rs  connectors.rs  conversations.rs  github.rs  lib.rs  logging.rs  main.rs  paths.rs  preferences.rs  projects.rs  providers.rs  runtime.rs  skills.rs  streaming.rs  uploads.rs  workspace.rs
src/: Tool.ts  commands.ts  main.tsx  query.ts
src/bridge/: initReplBridge.ts
src/cli/: print.ts  update.ts
src/commands/: command-localization.test.ts  commit-push-pr.ts  security-review.ts  statusline.tsx
src/components/: ConsoleOAuthFlow.tsx  Message.tsx  Messages.tsx  TeleportError.tsx  TeleportRepoMismatchDialog.tsx  TextInput.tsx  ThemePicker.tsx  ThinkingToggle.tsx
src/constants/: prompts.ts
src/entrypoints/: cli.tsx
src/hooks/: useTextInput.ts
src/query/: config.ts
src/screens/: REPL.tsx
src/state/: AppStateStore.ts  onChangeAppState.ts
src/types/: logs.ts
src/utils/: attachments.ts  autoUpdater.ts  config.ts  conversationRecovery.ts  customApiStorage.ts  doctorDiagnostic.ts  http.ts  managedEnvConstants.ts  parallelToolCalls.ts  sessionRestore.ts  sessionStorage.ts  sessionTitle.ts  (+2 more)
(+202 files in other folders)
