[package]
name = "cloai-desktop-native"
version = "0.0.3"
description = "Cloai desktop native shell"
authors = ["cloai"]
edition = "2021"

[lib]
name = "cloai_desktop_native"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
flate2 = "1.1.9"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
